# 4AxisMilling

./: .gitignore  .gitmodules  4AxisMilling.pro  CMakeLists.txt  FourAxisFabrication.pro  README.md  faf_parameters.h  faf_pipeline.cpp  faf_pipeline.h  main.cpp  main_cli.cpp
.github/workflows/: Linux.yml  MacOS.yml
GUI/: paintingwindow.cpp  paintingwindow.h  paintingwindown.cpp  paintingwindown.h
GUI/managers/: fafmanager.cpp  fafmanager.h  fafmanager.ui  fafsegmentationmanager.cpp  fafsegmentationmanager.h  fafsegmentationmanager.ui  fouraxischeckermanager.cpp  fouraxischeckermanager.h  fouraxischeckermanager.ui  fouraxisfabricationmanager.cpp  fouraxisfabricationmanager.h  fouraxisfabricationmanager.ui
cinolib/include/cinolib/gl/: draw_lines_tris.cpp
fouraxis/: fouraxis.cpp  fouraxis.h  orientation.cpp  orientation.h
fouraxischecker/: fouraxischecker.cpp
lib/clipper/: CMakeLists.txt  clipper.cpp
methods/: fouraxisfabrication.cpp  fouraxisfabrication.h
methods/faf/: faf_association.cpp  faf_association.h  faf_boolean.cpp  faf_boolean.h  faf_charts.cpp  faf_charts.h  faf_cutting.cpp  faf_cutting.h  faf_data.cpp  faf_data.h  faf_details.cpp  faf_details.h  faf_extract.cpp  faf_extract.h  faf_extraction.cpp  faf_extraction.h  faf_extremes.cpp  faf_extremes.h  faf_frequencies.cpp  faf_frequencies.h  faf_minimization.cpp  faf_minimization.h  faf_optimalrotation.cpp  faf_optimalrotation.h  faf_optimization.cpp  faf_optimization.h  faf_saliency.cpp  faf_saliency.h  faf_smoothing.cpp  faf_smoothing.h  faf_smoothingbackup.cpp  faf_smoothlines.cpp  faf_smoothlines.h  faf_split.cpp  faf_split.h  faf_triangulation.cpp  faf_triangulation.h  faf_utilities.cpp  faf_utilities.h  faf_various.cpp  (+3 more)
methods/faf/includes/: view_renderer.cpp  view_renderer.h
resources/: occluded.frag  occluded.vert  resources.qrc  visible.frag  visible.vert
scripts/linux/: 0_install_ubuntu.sh  1_build.sh  2_run_paper_results.sh
scripts/macOS/: 0_install_macos.sh  1_build.sh  2_run_paper_results.sh  make_it.sh
